--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/daveg1/sort-algorithm-visualiser#readme",
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.6",
     "typescript": "^4.9.5",
     "vite": "^2.9.18"
